--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -59,8 +59,8 @@ sites:
     url: https://blog.worldofwarships.com
   - name: dockyard.worldofwarships.com
     url: https://dockyard.worldofwarships.com
-  - name: forum.worldofwarships.com
-    url: https://forum.worldofwarships.com
+  # - name: forum.worldofwarships.com
+  #  url: https://forum.worldofwarships.com
   - name: logbook.worldofwarships.com
     url: https://logbook.worldofwarships.com
   - name: friends.worldofwarships.com
@@ -99,8 +99,8 @@ sites:
     url: https://armory.worldofwarships.asia
   - name: dockyard.worldofwarships.asia
     url: https://dockyard.worldofwarships.asia
-  - name: forum.worldofwarships.asia
-    url: https://forum.worldofwarships.asia
+  # - name: forum.worldofwarships.asia
+  #  url: https://forum.worldofwarships.asia
   - name: logbook.worldofwarships.asia
     url: https://logbook.worldofwarships.asia
   - name: friends.worldofwarships.asia
